# Docker-PostgreSQL-and-Crow-API

./: README.md  docker-compose.yml
bouncer_app/: Dockerfile  pgbouncer.ini  userlist.txt
crow_app/: CMakeLists.txt  Dockerfile  server.cpp
nginx_app/: Dockerfile
nginx_app/certification/nginx/: nginx.conf
nginx_app/configuration/nginx/: nginx.conf
nginx_app/static_html/: index.html
postresql_database/: vehiclestable.csv
